--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Text utils is a text based utility which can be used to manipulate your text in the way you want!"
+      content="Text utils is a word counter and the character counting utility which can be used to manipulate the text int the way you want!"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/apple-touch-icon" />
     
